# HUDS_Sampler

./: .gitignore  FIXES_TRACKING.md  HUDS_Modern.spec  HUDS_Tabs.spec  HUDS_Wizard.spec  LICENSE  PROJECT_PLAN.md  README.md  build_wizard.ps1  findings.md  launch_gui.py  launch_huds.py  post_build_torch.py  progress.md  pyproject.toml  requirements.txt  rthooks_fix_path.py  task_plan.md  validate_improvements.py  validate_split.py
examples/: config.example.json  simulator_output.example.csv
experiments/: benchmark.py  ground_truth.py  report.py  scenarios.yaml  task_plan.md
experiments/results/: bench_v2i_a.csv  bench_v2i_b.csv  bench_v2i_c.csv  bench_v2ts_a.csv  bench_v2ts_b.csv  bench_v2ts_c.csv  bench_v2v_a.csv  bench_v2v_b.csv  bench_v2v_c.csv  benchmark_combined.csv  benchmark_report.md
gui_modern/: main.py  style.py  window.py  worker.py
gui_modern/pages/: aedt_page.py  config_page.py  monitor_page.py  result_page.py
gui_tabs/: main.py  window.py  worker.py
gui_tabs/panels/: __init__.py  aedt_panel.py  config_panel.py  monitor_panel.py  (+1 more)
gui_wizard/: main.py  wizard.py  worker.py
hooks/: hook-torch.py
huds_app/: __init__.py  cli.py  config.py  data_schema.py  huds.py  maxwell.py  maxwell_variable.csv  metrics.py  model.py  sampling.py  storage.py  train.py  validation.py  workflow.py
tests/: integration_test_config.json  test_cli_workflow.py  test_config.py  test_huds.py  test_integration.py  test_maxwell.py  test_maxwell_robustness.py  test_model.py  test_sampling.py  test_schema.py  test_smoke.py  test_storage.py  test_workflow.py
(+195 files in other folders)
