[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huds-active-learning-app"
version = "0.1.0"
description = "HUDS active-learning workflow for surrogate model training."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "scikit-learn"
]

[project.optional-dependencies]
fast = ["faiss-cpu"]
test = ["pytest"]

[project.scripts]
huds-app = "huds_app.cli:main"

[tool.setuptools.packages.find]
include = ["huds_app*"]
